# easy-dlc-analyzer

./: LICENSE  README.md  pyproject.toml
data/: m3v1mp4DLC_resnet50_openfieldOct30shuffle1_10000.h5
easy_dlc_analyzer/: _version.py  gui.py  panels.py
