[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-dlc-analyzer"
description = "Simple application to analyze data created by DLC."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
]
version="0.0.0"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]
